# RuBi

./: .gitignore  .gitmodules  README.md
docs/: External links.gddoc  Mathematical Model - Inputs.gdsheet  Parameters of the legs-Matlab model.gddoc  Shoping list.gddoc  videos.txt
docs/Assembly manual/: Legs.smg
docs/Gears/: Hip gears parameters.xlsx
docs/Kinematics and dynamic models/: README.gddoc
docs/Knee design/: Comments on papers.gddoc
docs/Order Lists/: Order List 07-Apr-2016.xlsx.gdsheet  Order List 11-Apr-2016 - Rest.gdsheet  Order List 11-Apr-2016.gdsheet
docs/Profile selection/: .~lock.profile_selection.xlsx#  profile_selection.xlsx  profile_selection.xlsx.gdsheet
docs/Pulleys/: belt_tension_calculator.xls
docs/State of the art/: Existing 3D-printed robots.gddoc
docs/report/: .gitignore  Documents - Shortcut.lnk  compress_report.bash  report.tex
docs/report/figures/: .directory
media/Photos/: .directory
media/Presentations/: 08-May-15.pptx  PresentationNotes.odt
media/Videos/: .gitattributes
src/dacbot_control/: CMakeLists.txt  package.xml
src/dacbot_control/config/: dacbot_control.yaml
src/dacbot_control/launch/: dacbot_control.launch  dacbot_rviz.launch
src/dacbot_controllers/: CMakeLists.txt  dacbot_controllers.files  dacbot_controllers.includes  package.xml
src/dacbot_controllers/cfg/: two_neuron.cfg
src/dacbot_controllers/launch/: muscle_controller.launch
src/dacbot_controllers/src/: muscleRunbotController.cpp  muscleRunbotController.h  muscle_runbot_controller.cpp  muscle_runbot_controller.h  two_neuron_controller.cpp  two_neuron_controller.h
src/dacbot_description/: CMakeLists.txt  model.config
src/dacbot_description/launch/: dacbot.rviz  dacbot_rviz.launch
src/dacbot_description/urdf/: dacbot.gazebo  dacbot.gv  dacbot.sdf  dacbot.urdf  dacbot.xacro  dacbot_boxes.xacro  model.sdf
src/dacbot_gazebo/: CMakeLists.txt  package.xml
src/dacbot_gazebo/launch/: dacbot_world.launch  two_neuron_dynamic_reconfigure.perspective
src/dacbot_gazebo/worlds/: dacbot.world
src/dacbot_joint_control/: CMakeLists.txt  package.xml
src/dacbot_joint_control/config/: dacbot_joint_control.yaml
src/dacbot_joint_control/launch/: dacbot_joint_control.launch  dacbot_rqt.perspective  dacbot_rviz.launch
src/foot_contact_sensor/: CMakeLists.txt  foot_contact_sensor.files  foot_contact_sensor.includes  package.xml
src/foot_contact_sensor/src/: foot_contact_sensor.cpp
src/gazebo_resources/: CMakeLists.txt  package.xml
src/legs_controllers/: CMakeLists.txt  dacbot_controllers.files  dacbot_controllers.includes  legs_controllers.files  legs_controllers.includes  package.xml
src/legs_controllers/cfg/: impulse.cfg  two_neuron.cfg
src/legs_controllers/launch/: muscle_controller.launch
src/legs_controllers/res/: impulse_example.yaml
src/legs_controllers/src/: impulse_controller.cpp  impulse_controller.h  muscle_runbot_controller.cpp  two_neuron_controller.cpp  two_neuron_controller.h
src/legs_controllers/srv/: impulse.srv  impulse_one_leg.srv  impulse_two_legs.srv
src/legs_description/: CMakeLists.txt  model.config  package.xml
src/legs_description/launch/: legs_rviz.launch
src/legs_description/meshes/: Legs.SLDASM
src/legs_description/urdf/: legs.gazebo  legs.urdf  legs.xacro  legs_false_inertias.xacro  model.sdf
src/legs_gazebo/: CMakeLists.txt  package.xml
src/legs_gazebo/launch/: legs_false_inertias_world.launch  legs_world.launch  two_neuron_dynamic_reconfigure.perspective
src/legs_gazebo/models/duck/: model.config  model.sdf
src/legs_gazebo/models/duck/meshes/: duck.dae
src/legs_gazebo/worlds/: legs.world  treadmill.world  world_test.world
src/legs_joint_control/: CMakeLists.txt  package.xml
src/legs_joint_control/config/: legs_joint_control.yaml
src/legs_joint_control/launch/: legs_joint_control.launch  legs_rqt.perspective  legs_rviz.launch
src/locokit_hw/: CMakeLists.txt  locokit_hw_ros.files  locokit_hw_ros.includes  package.xml
src/locokit_hw/include/locokit/: robot_configuration.h
src/locokit_hw/include/locokit_firmware/: ConnectionClass.cpp  ConnectionClass.h  LocoKitInterface.cpp  LocoKitInterface.h  actuateMotors.c  loco-settings.cfg
src/locokit_hw/include/locokit_hw_ros/: locokit_hw_interface.h
src/locokit_hw/src/: locokit_hw_interface.cpp  locokit_hw_interface_node.cpp
src/locokit_ros_interface/: .gitignore  CMakeLists.txt~  Makefile  Makefile.conf  locokit_ros_controller.files  locokit_ros_controller.includes
src/locokit_ros_interface/src/: main.cpp  main_ai3.cpp
src/matlab_scripts/: Kinematics.m  MathModel.m  NewtonEulerAlgorithm2.m  NewtonEulerAlgorithm3.m  NewtonEulerAnalysis.m  NewtonEulerSolution.m  PreviousCalculus.m  TrajectoryForDh.m  directKinematics.m  draft1.m  energyMethod.m  forwardNEStep.m  fullSimulation.m  impulse.m  impulseCalculus.m  jacobianUse.m  kinematicsAndDynamics.m  main.m  motorCurves.m  parallelSprings.m  springs.m
src/matlab_scripts/Old/: KinematicsCalculus.m  NewtonEulerAlgorithm.m  NewtonEulerAlgorithm2.m  backwardsNEStep.m  directKinematics.m  invKinematics.m  jacobianUse.m
src/rubi_bringup/: CMakeLists.txt  package.xml
src/rubi_bringup/launch/: rubi_bringup.launch
src/rubi_bringup/scripts/: actuateMotors_in_RuBi.bash
src/rubi_controllers/: CMakeLists.txt  package.xml  rubi_controllers.includes
src/rubi_controllers/cfg/: impulse.cfg  two_neuron.cfg
src/rubi_controllers/launch/: muscle_controller.launch
src/rubi_controllers/src/: impulse_controller.cpp  impulse_controller.h  muscle_runbot_controller.cpp  muscle_runbot_controller.h  two_neuron_controller.cpp  (+1 more)
src/rubi_description/: CMakeLists.txt  model.config  package.xml
src/rubi_gazebo/: CMakeLists.txt  package.xml
src/rubi_gazebo/launch/: rubi_world.launch  two_neuron_dynamic_reconfigure.perspective
src/rubi_gazebo/worlds/: rubi.world
src/rubi_joint_control/: CMakeLists.txt  package.xml
src/scripts/: installFirstTime.sh  installGazeboWithDart.sh  install_first_time.sh
src/spring_controller/: spring_controller.files  spring_controller.includes
(+395 files in other folders)
