<?xml version="1.0"?>
<package>
  <name>legs_joint_control</name>
  <version>0.0.0</version>
  <description>This package is meant to give the ros topics to control the joints. This is not what actually move the legs, but the final interface for the user/program that does it.</description>

  <maintainer email="jorge.rguez.marin@gmail.com">Jorge Rodriguez</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>controller_manager</build_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>controller_manager</run_depend>

</package>